--- a/singleLinkedListAeroPlane/README
+++ b/singleLinkedListAeroPlane/README
@@ -1,3 +1,9 @@
+Chapter 3, Problem #2 
+Data Structures and Algorithms, 4th Edition
+Adam Drozdek
+
+prompt:
+
 Write a simple airline ticket reservation program. The program should display a menu
 with the following options: reserve a ticket, cancel a reservation, check whether a 
 ticket is reserved for a particular person, and display the passengers.
